--- a/menuDropDown/style.css
+++ b/menuDropDown/style.css
@@ -3,3 +3,72 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    min-height: 100vh;
+    background: burlywood;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+nav {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    letter-spacing: 0.3rem;
+    background-color: #23232e;
+    box-shadow: 0.1rem 0.1rem 0.8rem #23232e;
+}
+
+ul {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+}
+
+li ul {
+    display: none;
+}
+
+li {
+    margin: 1rem;
+    border-radius: 0.3rem;
+    position: relative;
+}
+
+a {
+    display: block;
+    text-decoration: none;
+    color: #fff;
+    height: 2rem;
+}
+
+li a:hover {
+    color: blue;
+    transition: 0.4s ease-in-out;
+}
+
+/* dropdown level 1 */
+li:hover ul {
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 12rem;
+    background-color: #23232e;
+}
+
+li ul a {
+    text-align: left;
+}
+
+/* dropdown level 2 */
+li.drop ul{
+    display: none;
+}
+
+li.drop:hover ul {
+    display: block;
+    top: -1rem;
+    left: 100%;
+}
